# openGalaxy

./: README.md
0.14/: README
0.14/Debian Jessie i386/: README  opengalaxy-certificates-manager_0.14-1_i386.deb  opengalaxy-client_0.14-1_i386.deb  opengalaxy-common_0.14-1_all.deb  opengalaxy-data_0.14-1_all.deb  opengalaxy-server_0.14-1_i386.deb
0.14/source/: API.TXT  Makefile.am  Makefile.in  README-BUILDING  README-MSYS2.TXT  README-RaspberryPi  README.QUICKSTART  build-debs  changelog  config.h.in  configure  configure.ac  installer.nsi.in  mingw-build
0.14/source/debian/: changelog  control  copyright  opengalaxy-certificates-manager.install  opengalaxy-certificates-manager.menu  opengalaxy-certificates-manager.postinst  opengalaxy-client.docs  opengalaxy-client.install  opengalaxy-client.menu  opengalaxy-client.postinst  opengalaxy-common.dirs  opengalaxy-common.docs  opengalaxy-common.postinst  opengalaxy-data.install  opengalaxy-data.postinst  opengalaxy-server.install  opengalaxy-server.menu  opengalaxy-server.postinst  opengalaxy-server.postrm  rules  watch
0.14/source/example/: README  dbconnect.php  get-sia-messages.php  gms.css  gms.js  index.php  settings.php
0.14/source/external-libs/: lws_get_ssl-master.patch  lws_msys2.patch
0.14/source/m4/: m4-ax_check_zlib.m4
0.14/source/src/ca/: certs_pkg.c  opengalaxy-ca.c  opengalaxy-ca.desktop.in  opengalaxy-ca.man.in  passphrase.txt  support.c  support.h  uac.xml.in  upload.c  websocket.c  websocket.h  win-resource.rc.in
0.14/source/src/client/: areas.c  areas.h  broadcast.c  broadcast.h  commander.c  commander.h  connect.c  connect.h  json-decode.c  json-decode.h  log.c  log.h  opengalaxy-client.c  opengalaxy-client.desktop.in  opengalaxy-client.h  opengalaxy-client.man.in  support.c  support.h  websocket.c  websocket.h  win-resource.rc.in
0.14/source/src/common/: atomic.h  credentials.c  credentials.h  json.c  json.h  ssl_evp.c  ssl_evp.h  strtok_r.c  strtok_r.h  tmalloc.cpp  tmalloc.hpp
0.14/source/src/config/: CreateDatabase.sql  CreateUser.sql  galaxy.conf.in  ssmtp.conf.in
0.14/source/src/glade/: ca_connect_dialog.glade  ca_gtk.css  ca_main_window.glade  ca_password_dialog.glade  ca_privileges_dialog.glade  ca_upload_info.glade  ca_zones_privileges_dialog.glade  client_area_images.glade  client_connect_dialog.glade  client_gtk.css  client_main_window.glade  client_password_dialog.glade  error_dialog.glade  info_dialog.glade  placeholder.txt.in  popen_window.glade
0.14/source/src/server/: Array.hpp  Certificates.cpp  Certificates.hpp  Commander.cpp  Commander.hpp  Galaxy.cpp  Galaxy.hpp  Output-Email.cpp  Output-Email.hpp  Output-Mysql.cpp  Output-Mysql.hpp  Output-Text.cpp  Output-Text.hpp  Output.cpp  Output.hpp  Poll.cpp  Poll.hpp  Receiver.cpp  Receiver.hpp  Serial.cpp  Serial.hpp  Session.cpp  Session.hpp  Settings.cpp  Settings.hpp  Sia.cpp  Sia.hpp  SiaEvent.hpp  Siablock.cpp  Siablock.hpp  Signal.cpp  Signal.hpp  Syslog.cpp  Syslog.hpp  Websocket-Http.cpp  Websocket-Ssl.cpp  Websocket.cpp  Websocket.hpp  context_options.hpp  galaxy.conf.man.in  (+7 more)
0.14/source/src/www/: index.html  index.html.in  old.html  opengalaxy.css  opengalaxy.js
